@@ -1,10 +1,15 @@
+2014-08-22  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
+
+	* texmfmp.c: Symplify support of multibyte file names, by
+	updating fsyscp_popen in kpathsea.
+
 2014-08-22  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* texmfmp.c: Avoid several compiler warnings (Windows only).
 
 2014-08-22  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
-	* texmfmp.c: Support multibyte filenames in pipe (Windows only).
+	* texmfmp.c: Support multibyte file names in pipe (Windows only).
 
 2014-07-23  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
